# ObjectOrientedC

./: .gitignore  CMakeLists.txt  ObjectOrientedC.sln  README.md
ObjectOrientedC/: ObjectOrientedC.vcxproj  ObjectOrientedC.vcxproj.filters
ObjectOrientedC/examples/: vector_example.c
ObjectOrientedC/include/containers/: vector.h
examples/: CMakeLists.txt  vector_example.c  vehicle_example.c
include/containers/: common.h  vector.h
include/cxx/: vector.h
include/objects/: Bicycle.h  Car.h  IVehicle.h  common.h
src/: Bicycle.c  Car.c  vector.c
